# mcp-learning-lab

./: .gitignore  README.md  pyproject.toml
phase10_google_calendar/: README.md  host.py  server.py
phase1_hello_world/: host.py  server.py
phase2_tools/: host.py  server.py
phase3_resources/: company_policy.md  host.py  server.py
phase4_prompts/: host.py  server.py
phase5_gateway/: host.py  server_customer.py  server_weather.py
phase6_multi_server/: host.py  server_customer.py  server_ticket.py  server_weather.py
phase7_auth/: host.py  server.py
phase8_remote_mcp/: host.py  server.py
phase9_rovo/: host.py
