[project]
name = "mcp-learning-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.2",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "mcp>=1.28.0",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
